--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -677,7 +677,7 @@ footer, header, hgroup, menu, nav, section {
   width: 940px;
   background-color: #fff;
   margin-top: 22px;
-  height: 186px;
+  /*	height:186px;*/
   width: 940px;
   display: block;
 }
@@ -686,8 +686,9 @@ footer, header, hgroup, menu, nav, section {
   border-style: solid;
   border-width: 1px;
   height: 184px;
+  /*	display:inline;*/
 }
-/* line 341, ../../../app/assets/stylesheets/grid.scss */
+/* line 342, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side {
   height: 184px;
   display: inline;
@@ -698,21 +699,21 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
   width: 168px;
 }
-/* line 348, ../../../app/assets/stylesheets/grid.scss */
+/* line 349, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box {
   width: 154px;
   height: 51px;
 }
-/* line 351, ../../../app/assets/stylesheets/grid.scss */
+/* line 352, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a {
   color: #fff;
 }
-/* line 352, ../../../app/assets/stylesheets/grid.scss */
+/* line 353, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 355, ../../../app/assets/stylesheets/grid.scss */
+/* line 356, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .right-side {
   height: 184px;
   display: inline;
@@ -723,47 +724,21 @@ footer, header, hgroup, menu, nav, section {
   margin-right: 0;
   width: 730px;
 }
-/* line 364, ../../../app/assets/stylesheets/grid.scss */
+/* line 365, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .booking-box {
   margin-top: 80px;
   margin-left: 20px;
 }
-/* line 368, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news-box {
-  width: 200px;
-}
-/* line 372, ../../../app/assets/stylesheets/grid.scss */
+/* line 371, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news {
-  height: 184px;
   display: inline;
   float: left;
+  height: 184px;
   margin-left: 10px;
   margin-right: 10px;
-  width: 220px;
-  width: 230px;
-  /*	.content{
-  		.header
-  		{
-  			height:54px;
-  			margin-top:10px;
-  			@include grid(3);
-  			@include alpha;
-  			@include omega;
-  			width:230px;
-  			font-weight: bold;
-  			a{
-  				text-decoration:none;
-  				font-weight: bold;
-  				color:#000;
-  			}a:hover{
-  				color:#fff;
-  				background-color:#000;
-  			}
-  		}
-  	}
-  	*/
+  width: 228px;
 }
-/* line 398, ../../../app/assets/stylesheets/grid.scss */
+/* line 380, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -774,64 +749,64 @@ footer, header, hgroup, menu, nav, section {
   width: 220px;
   margin-left: 0;
   margin-right: 0;
-  width: 230px;
+  width: 228px;
   font-weight: bold;
 }
-/* line 406, ../../../app/assets/stylesheets/grid.scss */
+/* line 388, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header a {
   text-decoration: none;
   font-weight: bold;
   color: #000;
 }
-/* line 410, ../../../app/assets/stylesheets/grid.scss */
+/* line 392, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 415, ../../../app/assets/stylesheets/grid.scss */
+/* line 397, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a {
   text-decoration: none;
   font-weight: bold;
   color: #448;
 }
-/* line 419, ../../../app/assets/stylesheets/grid.scss */
+/* line 401, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 423, ../../../app/assets/stylesheets/grid.scss */
+/* line 405, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 428, ../../../app/assets/stylesheets/grid.scss */
+/* line 410, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .gray {
   color: #999;
 }
-/* line 431, ../../../app/assets/stylesheets/grid.scss */
+/* line 413, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content {
   margin-top: 0px;
   width: 210px;
 }
 
-/* line 437, ../../../app/assets/stylesheets/grid.scss */
+/* line 422, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 441, ../../../app/assets/stylesheets/grid.scss */
+/* line 426, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
-/* line 443, ../../../app/assets/stylesheets/grid.scss */
+/* line 428, ../../../app/assets/stylesheets/grid.scss */
 .grid-container .top-margin {
   margin-top: 32px;
 }
 
-/* line 448, ../../../app/assets/stylesheets/grid.scss */
+/* line 433, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -841,7 +816,7 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
 }
 
-/* line 453, ../../../app/assets/stylesheets/grid.scss */
+/* line 438, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room-right {
   display: inline;
   float: left;
@@ -852,19 +827,19 @@ footer, header, hgroup, menu, nav, section {
   padding-right: 480px;
 }
 
-/* line 460, ../../../app/assets/stylesheets/grid.scss */
+/* line 445, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 465, ../../../app/assets/stylesheets/grid.scss */
+/* line 450, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 470, ../../../app/assets/stylesheets/grid.scss */
+/* line 455, ../../../app/assets/stylesheets/grid.scss */
 .slim-box {
   background-color: #fff;
   margin-top: 36px;
@@ -875,29 +850,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 475, ../../../app/assets/stylesheets/grid.scss */
+/* line 460, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 481, ../../../app/assets/stylesheets/grid.scss */
+/* line 466, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 484, ../../../app/assets/stylesheets/grid.scss */
+/* line 469, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a {
   color: #fff;
 }
-/* line 485, ../../../app/assets/stylesheets/grid.scss */
+/* line 470, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 489, ../../../app/assets/stylesheets/grid.scss */
+/* line 474, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -910,14 +885,14 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 497, ../../../app/assets/stylesheets/grid.scss */
+/* line 482, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
 }
 
-/* line 504, ../../../app/assets/stylesheets/grid.scss */
+/* line 489, ../../../app/assets/stylesheets/grid.scss */
 .company-index {
   width: 110px;
   height: 60px;
@@ -927,7 +902,7 @@ a:hover {
   margin-right: 10px;
   margin-top: 8px;
 }
-/* line 513, ../../../app/assets/stylesheets/grid.scss */
+/* line 498, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
   border-style: solid;
   border-width: 1px;
@@ -938,7 +913,7 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 524, ../../../app/assets/stylesheets/grid.scss */
+/* line 509, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
@@ -947,7 +922,7 @@ a:hover {
   width: 940px;
 }
 
-/* line 528, ../../../app/assets/stylesheets/grid.scss */
+/* line 513, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box {
   float: right;
   text-align: center;
@@ -962,7 +937,7 @@ a:hover {
   /* IE's opacity*/
   opacity: 0.8;
 }
-/* line 541, ../../../app/assets/stylesheets/grid.scss */
+/* line 526, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box .tlf-content {
   position: relative;
   top: 10px;
@@ -972,7 +947,7 @@ a:hover {
   height: 40px;
 }
 
-/* line 551, ../../../app/assets/stylesheets/grid.scss */
+/* line 536, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row {
   display: inline;
   float: left;
@@ -983,21 +958,21 @@ a:hover {
   margin-right: 0;
   margin-right: 6px;
 }
-/* line 557, ../../../app/assets/stylesheets/grid.scss */
+/* line 542, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row .booking-back {
   padding: 4px;
   background-color: #999;
   margin: 6px;
 }
 
-/* line 566, ../../../app/assets/stylesheets/grid.scss */
+/* line 551, ../../../app/assets/stylesheets/grid.scss */
 .booking-meetingroom-column {
   float: left;
   margin: 2px;
   width: 134px;
 }
 
-/* line 572, ../../../app/assets/stylesheets/grid.scss */
+/* line 557, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 {
   min-height: 500px;
   display: inline;
@@ -1007,7 +982,7 @@ a:hover {
   width: 940px;
   margin-top: 24px;
 }
-/* line 576, ../../../app/assets/stylesheets/grid.scss */
+/* line 561, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .left-column {
   display: inline;
   float: left;
@@ -1016,7 +991,7 @@ a:hover {
   width: 220px;
   margin-left: 0;
 }
-/* line 580, ../../../app/assets/stylesheets/grid.scss */
+/* line 565, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column1 {
   display: inline;
   float: left;
@@ -1024,7 +999,7 @@ a:hover {
   margin-right: 10px;
   width: 60px;
 }
-/* line 583, ../../../app/assets/stylesheets/grid.scss */
+/* line 568, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column2 {
   display: inline;
   float: left;
@@ -1032,7 +1007,7 @@ a:hover {
   margin-right: 10px;
   width: 140px;
 }
-/* line 586, ../../../app/assets/stylesheets/grid.scss */
+/* line 571, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column3 {
   display: inline;
   float: left;
@@ -1040,7 +1015,7 @@ a:hover {
   margin-right: 10px;
   width: 220px;
 }
-/* line 589, ../../../app/assets/stylesheets/grid.scss */
+/* line 574, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .right-column {
   display: inline;
   float: left;
@@ -1051,19 +1026,19 @@ a:hover {
   padding-right: 80px;
 }
 
-/* line 596, ../../../app/assets/stylesheets/grid.scss */
+/* line 581, ../../../app/assets/stylesheets/grid.scss */
 .bookings-calendar {
   margin-top: 10px;
   margin-left: 10px;
   text-align: center;
 }
 
-/* line 602, ../../../app/assets/stylesheets/grid.scss */
+/* line 587, ../../../app/assets/stylesheets/grid.scss */
 .top_margin {
   margin-top: 8px;
 }
 
-/* line 604, ../../../app/assets/stylesheets/grid.scss */
+/* line 589, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1075,41 +1050,41 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 610, ../../../app/assets/stylesheets/grid.scss */
+/* line 595, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 617, ../../../app/assets/stylesheets/grid.scss */
+/* line 602, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .content .content-top {
   height: 280px;
 }
-/* line 619, ../../../app/assets/stylesheets/grid.scss */
+/* line 604, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .text-right {
   text-align: right;
 }
-/* line 622, ../../../app/assets/stylesheets/grid.scss */
+/* line 607, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 625, ../../../app/assets/stylesheets/grid.scss */
+/* line 610, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a {
   color: #fff;
 }
-/* line 626, ../../../app/assets/stylesheets/grid.scss */
+/* line 611, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 628, ../../../app/assets/stylesheets/grid.scss */
+/* line 613, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .image-box {
   height: 376px;
 }
 
-/* line 633, ../../../app/assets/stylesheets/grid.scss */
+/* line 618, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1121,36 +1096,36 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 639, ../../../app/assets/stylesheets/grid.scss */
+/* line 624, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 646, ../../../app/assets/stylesheets/grid.scss */
+/* line 631, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .content .content-top {
   height: 280px;
 }
-/* line 648, ../../../app/assets/stylesheets/grid.scss */
+/* line 633, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .text-right {
   text-align: right;
 }
-/* line 651, ../../../app/assets/stylesheets/grid.scss */
+/* line 636, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 654, ../../../app/assets/stylesheets/grid.scss */
+/* line 639, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a {
   color: #fff;
 }
-/* line 655, ../../../app/assets/stylesheets/grid.scss */
+/* line 640, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 657, ../../../app/assets/stylesheets/grid.scss */
+/* line 642, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .image-box {
   height: 376px;
 }
