--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -1,4 +1,36 @@
 
+.squared-box
+  .borders
+    .menu-box
+      = render :partial => "shared/menu"
+    .content
+      h1
+        = @company.title
+      =raw @company.body
+      - if can?(:edit, @company)
+        .edit
+          = link_to t('admin.edit'), edit_company_path(@company), :class =>'button'
+          '&nbsp;   
+          = link_to t('admin.delete'), @company, :confirm => t('admin.are_you_sure'), :method => :delete, :class =>'button'
+          '&nbsp;  
+          = link_to 'tilføj logo', new_company_company_thumb_path(@company), :class =>'button'
+
+        p= link_to 'Send E-Mail til alle i firma', "mailto:#{@company.users.map(&:email).join(', ')}"
+
+
+      
+.squared-box.fixed-height
+  .borders
+    div style="width:458px; height:376px; overflow:hidden"
+      = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
+    .tlf-box
+      .tlf-content
+        | T: 
+        = @company.phone
+      .tlf-content 
+        | - 
+      .tlf-content 
+        =raw @link
 .clearfix
 br
 = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
