--- a/app/views/shared/_news.html.slim
+++ b/app/views/shared/_news.html.slim
@@ -24,5 +24,5 @@
                 - if newspost.body.length > 160
                   |  | 
                 = link_to 'rediger', edit_newspost_path(newspost)
-= will_paginate @newsposts
+= will_paginate newsposts
   
