--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -664,283 +664,8 @@ footer, header, hgroup, menu, nav, section {
 .squared-box .image-box {
   height: 376px;
 }
-
-/* line 325, ../../../app/assets/stylesheets/grid.scss */
-.fixed-height {
-  height: 376px;
-}
-
-/* line 329, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 940px;
-  background-color: #fff;
-  margin-top: 22px;
-  height: 186px;
-  width: 940px;
-  display: block;
-  float: left;
-}
-/* line 338, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .borders {
-  border-style: solid;
-  border-width: 1px;
-  height: 184px;
-}
-/* line 344, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .left-side {
-  height: 184px;
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 220px;
-  margin-left: 0;
-  width: 168px;
-}
-/* line 351, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .left-side .menu-box {
-  width: 154px;
-  height: 51px;
-}
-/* line 354, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .left-side .menu-box a {
-  color: #fff;
-}
-/* line 355, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .left-side .menu-box a:hover {
-  color: #000;
-  background-color: #fff;
-}
-/* line 358, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .right-side {
-  height: 184px;
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 620px;
-  margin-right: 0;
-  width: 730px;
-}
-/* line 367, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .booking-box {
-  margin-top: 80px;
-  margin-left: 20px;
-}
-/* line 372, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news {
-  height: 184px;
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 220px;
-  width: 230px;
-}
-/* line 378, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news .content .header {
-  height: 54px;
-  margin-top: 10px;
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 220px;
-  margin-left: 0;
-  margin-right: 0;
-  width: 230px;
-  font-weight: bold;
-}
-/* line 386, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news .content .header a {
-  text-decoration: none;
-  font-weight: bold;
-  color: #000;
-}
-/* line 390, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news .content .header a:hover {
-  color: #fff;
-  background-color: #000;
-}
-/* line 397, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news .header {
-  height: 54px;
-  margin-top: 10px;
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 220px;
-  margin-left: 0;
-  margin-right: 0;
-  width: 230px;
-  font-weight: bold;
-}
-/* line 406, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news a {
-  text-decoration: none;
-  font-weight: bold;
-  color: #448;
-}
-/* line 410, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news a:hover {
-  color: #fff;
-  background-color: #000;
-}
-/* line 414, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news h1 {
-  margin-bottom: 0px;
-  height: 34px;
-  color: #000;
-}
-/* line 419, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news .gray {
-  color: #999;
-}
-/* line 422, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news .content {
-  margin-top: 0px;
-  width: 210px;
-}
-
-/* line 428, ../../../app/assets/stylesheets/grid.scss */
-.text-right {
-  text-align: right;
-}
-
-/* line 432, ../../../app/assets/stylesheets/grid.scss */
-.grid-container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 960px;
-}
-/* line 434, ../../../app/assets/stylesheets/grid.scss */
-.grid-container .top-margin {
-  margin-top: 32px;
-}
-
-/* line 439, ../../../app/assets/stylesheets/grid.scss */
-.meeting-room {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 140px;
-  margin-left: 0;
-}
-
-/* line 444, ../../../app/assets/stylesheets/grid.scss */
-.meeting-room-right {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 300px;
-  margin-right: 0;
-  padding-right: 480px;
-}
-
-/* line 451, ../../../app/assets/stylesheets/grid.scss */
-a {
-  text-decoration: none;
-  color: #444;
-}
-
-/* line 456, ../../../app/assets/stylesheets/grid.scss */
-a:hover {
-  color: #fff;
-  background-color: #000;
-}
-
-/* line 461, ../../../app/assets/stylesheets/grid.scss */
-.slim-box {
-  background-color: #fff;
-  margin-top: 36px;
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 460px;
-  min-height: 80px;
-}
-/* line 466, ../../../app/assets/stylesheets/grid.scss */
-.slim-box .borders {
-  border-style: solid;
-  border-width: 1px;
-  height: 80px;
-  display: block;
-}
-/* line 472, ../../../app/assets/stylesheets/grid.scss */
-.slim-box .menu-box {
-  width: 400px;
-  height: 51px;
-}
-/* line 475, ../../../app/assets/stylesheets/grid.scss */
-.slim-box .menu-box a {
-  color: #fff;
-}
-/* line 476, ../../../app/assets/stylesheets/grid.scss */
-.slim-box .menu-box a:hover {
-  color: #000;
-  background-color: #fff;
-}
-
-/* line 480, ../../../app/assets/stylesheets/grid.scss */
-.googlemap {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 940px;
-  background-color: #fff;
-  margin-top: 22px;
-  height: 600px;
-  width: 940px;
-  display: block;
-}
-/* line 488, ../../../app/assets/stylesheets/grid.scss */
-.googlemap .borders {
-  border-style: solid;
-  border-width: 1px;
-  height: 600px;
-}
-
-/* line 495, ../../../app/assets/stylesheets/grid.scss */
-.company-index {
-  width: 110px;
-  height: 60px;
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 8px;
-}
-/* line 504, ../../../app/assets/stylesheets/grid.scss */
-.company-index .image {
-  border-style: solid;
-  border-width: 1px;
-  width: 70px;
-  height: 57px;
-  display: inline;
-  float: left;
-  margin: 1px 10px 1px 1px;
-}
-
-/* line 515, ../../../app/assets/stylesheets/grid.scss */
-.fullpage {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 940px;
-}
-
-/* line 519, ../../../app/assets/stylesheets/grid.scss */
-.tlf-box {
+/* line 323, ../../../app/assets/stylesheets/grid.scss */
+.squared-box .tlf-box {
   float: right;
   text-align: center;
   background-color: #fff;
@@ -954,8 +679,8 @@ a:hover {
   /* IE's opacity*/
   opacity: 0.8;
 }
-/* line 532, ../../../app/assets/stylesheets/grid.scss */
-.tlf-box .tlf-content {
+/* line 336, ../../../app/assets/stylesheets/grid.scss */
+.squared-box .tlf-box .tlf-content {
   position: relative;
   top: 10px;
   margin: 10px;
@@ -964,7 +689,281 @@ a:hover {
   height: 40px;
 }
 
-/* line 542, ../../../app/assets/stylesheets/grid.scss */
+/* line 347, ../../../app/assets/stylesheets/grid.scss */
+.fixed-height {
+  height: 376px;
+}
+
+/* line 351, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 940px;
+  background-color: #fff;
+  margin-top: 22px;
+  height: 186px;
+  width: 940px;
+  display: block;
+  float: left;
+}
+/* line 360, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .borders {
+  border-style: solid;
+  border-width: 1px;
+  height: 184px;
+}
+/* line 366, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .left-side {
+  height: 184px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 220px;
+  margin-left: 0;
+  width: 168px;
+}
+/* line 373, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .left-side .menu-box {
+  width: 154px;
+  height: 51px;
+}
+/* line 376, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .left-side .menu-box a {
+  color: #fff;
+}
+/* line 377, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .left-side .menu-box a:hover {
+  color: #000;
+  background-color: #fff;
+}
+/* line 380, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .right-side {
+  height: 184px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 620px;
+  margin-right: 0;
+  width: 730px;
+}
+/* line 389, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .booking-box {
+  margin-top: 80px;
+  margin-left: 20px;
+}
+/* line 394, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news {
+  height: 184px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 220px;
+  width: 230px;
+}
+/* line 400, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news .content .header {
+  height: 54px;
+  margin-top: 10px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 220px;
+  margin-left: 0;
+  margin-right: 0;
+  width: 230px;
+  font-weight: bold;
+}
+/* line 408, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news .content .header a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #000;
+}
+/* line 412, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news .content .header a:hover {
+  color: #fff;
+  background-color: #000;
+}
+/* line 419, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news .header {
+  height: 54px;
+  margin-top: 10px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 220px;
+  margin-left: 0;
+  margin-right: 0;
+  width: 230px;
+  font-weight: bold;
+}
+/* line 428, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #448;
+}
+/* line 432, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news a:hover {
+  color: #fff;
+  background-color: #000;
+}
+/* line 436, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news h1 {
+  margin-bottom: 0px;
+  height: 34px;
+  color: #000;
+}
+/* line 441, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news .gray {
+  color: #999;
+}
+/* line 444, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news .content {
+  margin-top: 0px;
+  width: 210px;
+}
+
+/* line 450, ../../../app/assets/stylesheets/grid.scss */
+.text-right {
+  text-align: right;
+}
+
+/* line 454, ../../../app/assets/stylesheets/grid.scss */
+.grid-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 960px;
+}
+/* line 456, ../../../app/assets/stylesheets/grid.scss */
+.grid-container .top-margin {
+  margin-top: 32px;
+}
+
+/* line 461, ../../../app/assets/stylesheets/grid.scss */
+.meeting-room {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 140px;
+  margin-left: 0;
+}
+
+/* line 466, ../../../app/assets/stylesheets/grid.scss */
+.meeting-room-right {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 300px;
+  margin-right: 0;
+  padding-right: 480px;
+}
+
+/* line 473, ../../../app/assets/stylesheets/grid.scss */
+a {
+  text-decoration: none;
+  color: #444;
+}
+
+/* line 478, ../../../app/assets/stylesheets/grid.scss */
+a:hover {
+  color: #fff;
+  background-color: #000;
+}
+
+/* line 483, ../../../app/assets/stylesheets/grid.scss */
+.slim-box {
+  background-color: #fff;
+  margin-top: 36px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 460px;
+  min-height: 80px;
+}
+/* line 488, ../../../app/assets/stylesheets/grid.scss */
+.slim-box .borders {
+  border-style: solid;
+  border-width: 1px;
+  height: 80px;
+  display: block;
+}
+/* line 494, ../../../app/assets/stylesheets/grid.scss */
+.slim-box .menu-box {
+  width: 400px;
+  height: 51px;
+}
+/* line 497, ../../../app/assets/stylesheets/grid.scss */
+.slim-box .menu-box a {
+  color: #fff;
+}
+/* line 498, ../../../app/assets/stylesheets/grid.scss */
+.slim-box .menu-box a:hover {
+  color: #000;
+  background-color: #fff;
+}
+
+/* line 502, ../../../app/assets/stylesheets/grid.scss */
+.googlemap {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 940px;
+  background-color: #fff;
+  margin-top: 22px;
+  height: 600px;
+  width: 940px;
+  display: block;
+}
+/* line 510, ../../../app/assets/stylesheets/grid.scss */
+.googlemap .borders {
+  border-style: solid;
+  border-width: 1px;
+  height: 600px;
+}
+
+/* line 517, ../../../app/assets/stylesheets/grid.scss */
+.company-index {
+  width: 110px;
+  height: 60px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 8px;
+}
+/* line 526, ../../../app/assets/stylesheets/grid.scss */
+.company-index .image {
+  border-style: solid;
+  border-width: 1px;
+  width: 70px;
+  height: 57px;
+  display: inline;
+  float: left;
+  margin: 1px 10px 1px 1px;
+}
+
+/* line 537, ../../../app/assets/stylesheets/grid.scss */
+.fullpage {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 940px;
+}
+
+/* line 543, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row {
   display: inline;
   float: left;
@@ -975,21 +974,21 @@ a:hover {
   margin-right: 0;
   margin-right: 6px;
 }
-/* line 548, ../../../app/assets/stylesheets/grid.scss */
+/* line 549, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row .booking-back {
   padding: 4px;
   background-color: #999;
   margin: 6px;
 }
 
-/* line 557, ../../../app/assets/stylesheets/grid.scss */
+/* line 558, ../../../app/assets/stylesheets/grid.scss */
 .booking-meetingroom-column {
   float: left;
   margin: 2px;
   width: 134px;
 }
 
-/* line 563, ../../../app/assets/stylesheets/grid.scss */
+/* line 564, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 {
   min-height: 500px;
   display: inline;
@@ -999,7 +998,7 @@ a:hover {
   width: 940px;
   margin-top: 24px;
 }
-/* line 567, ../../../app/assets/stylesheets/grid.scss */
+/* line 568, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .left-column {
   display: inline;
   float: left;
@@ -1008,7 +1007,7 @@ a:hover {
   width: 220px;
   margin-left: 0;
 }
-/* line 571, ../../../app/assets/stylesheets/grid.scss */
+/* line 572, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column1 {
   display: inline;
   float: left;
@@ -1016,7 +1015,7 @@ a:hover {
   margin-right: 10px;
   width: 60px;
 }
-/* line 574, ../../../app/assets/stylesheets/grid.scss */
+/* line 575, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column2 {
   display: inline;
   float: left;
@@ -1024,7 +1023,7 @@ a:hover {
   margin-right: 10px;
   width: 140px;
 }
-/* line 577, ../../../app/assets/stylesheets/grid.scss */
+/* line 578, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column3 {
   display: inline;
   float: left;
@@ -1032,7 +1031,7 @@ a:hover {
   margin-right: 10px;
   width: 220px;
 }
-/* line 580, ../../../app/assets/stylesheets/grid.scss */
+/* line 581, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .right-column {
   display: inline;
   float: left;
@@ -1043,19 +1042,19 @@ a:hover {
   padding-right: 80px;
 }
 
-/* line 587, ../../../app/assets/stylesheets/grid.scss */
+/* line 588, ../../../app/assets/stylesheets/grid.scss */
 .bookings-calendar {
   margin-top: 10px;
   margin-left: 10px;
   text-align: center;
 }
 
-/* line 593, ../../../app/assets/stylesheets/grid.scss */
+/* line 594, ../../../app/assets/stylesheets/grid.scss */
 .top_margin {
   margin-top: 8px;
 }
 
-/* line 595, ../../../app/assets/stylesheets/grid.scss */
+/* line 596, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1067,41 +1066,41 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 601, ../../../app/assets/stylesheets/grid.scss */
+/* line 602, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 608, ../../../app/assets/stylesheets/grid.scss */
+/* line 609, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .content .content-top {
   height: 280px;
 }
-/* line 610, ../../../app/assets/stylesheets/grid.scss */
+/* line 611, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .text-right {
   text-align: right;
 }
-/* line 613, ../../../app/assets/stylesheets/grid.scss */
+/* line 614, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 616, ../../../app/assets/stylesheets/grid.scss */
+/* line 617, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a {
   color: #fff;
 }
-/* line 617, ../../../app/assets/stylesheets/grid.scss */
+/* line 618, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 619, ../../../app/assets/stylesheets/grid.scss */
+/* line 620, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .image-box {
   height: 376px;
 }
 
-/* line 624, ../../../app/assets/stylesheets/grid.scss */
+/* line 625, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1113,36 +1112,36 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 630, ../../../app/assets/stylesheets/grid.scss */
+/* line 631, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 637, ../../../app/assets/stylesheets/grid.scss */
+/* line 638, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .content .content-top {
   height: 280px;
 }
-/* line 639, ../../../app/assets/stylesheets/grid.scss */
+/* line 640, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .text-right {
   text-align: right;
 }
-/* line 642, ../../../app/assets/stylesheets/grid.scss */
+/* line 643, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 645, ../../../app/assets/stylesheets/grid.scss */
+/* line 646, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a {
   color: #fff;
 }
-/* line 646, ../../../app/assets/stylesheets/grid.scss */
+/* line 647, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 648, ../../../app/assets/stylesheets/grid.scss */
+/* line 649, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .image-box {
   height: 376px;
 }
